samples/_failures_safe/1760960203_65562b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec6c8fb8.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_ec6c8fb8.c:142:9: error: expected expression at end of input
  142 |         for (int j = 0;
      |         ^~~
./samples/SAFE/__tmp_ec6c8fb8.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec6c8fb8.c:142:9: error: expected declaration or statement at end of input
